16-kubernetes进阶-服务发布ingress进阶/ingress-test-deploymnet-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ingress-test
  name: ingress-test
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-test
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ingress-test
    spec:
      affinity: {}
      containers:
      - env:
        - name: TZ
          value: Asia/Shanghai
        - name: LANG
          value: C.UTF-8
        image: nginx
        imagePullPolicy: IfNotPresent
        lifecycle: {}
        name: ingress-test
        ports:
        - containerPort: 80
          name: web
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 10m
            memory: 10Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /usr/share/zoneinfo/Asia/Shanghai
          type: ""
        name: tz-config
      - hostPath:
          path: /etc/timezone
          type: ""
        name: timezone
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ingress-test
  name: ingress-test
  namespace: test
spec:
  ports:
  - name: ingress-test-service
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ingress-test
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
