16-kubernetes进阶-服务发布ingress进阶/ingress-白名单.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: https://www.baidu.com
    nginx.ingress.kubernetes.io/permanent-redirect-code: "308"
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.2.0/24
  name: ingress-test
  namespace: test
spec:
  rules:
  - host: www.daizhe.net.cn
    http:
      paths:
      - backend:
          serviceName: ingress-test
          servicePort: 80
        path: /
status:
  loadBalancer: {}
